--- a/src/app/members/members.component.css
+++ b/src/app/members/members.component.css
@@ -1,227 +1,27 @@
-.members-wrapper {
-    background-image: url("../../assets/images/background.jpg");
-    height: 5000px;
-    width: 100%;
-    position: absolute;
-    overflow-y: scroll;
+#header {
+  padding: 0.2em 0 0em 0;
+}
+
+#header header{
+  padding: 0;
+}
+
+.row {
+  padding: 0;
+}
+
+.logo-header-svg{
+  margin-bottom: -30rem;
 }
 
 
-
-#toolbar {
-    padding:0;
-    width:70%;
-    margin-left:-20%;
+.iframeTickets{
+  width: 100rem;
 }
 
-header {
-    width:50em;
-    top: 0;
-    left: 0;
-    position: relative;
-}
-
-.form-container {
-    background: transparent;
-    padding:3.5em;
-    width:500px;
-    position:absolute;
-    left:50%;
-    margin-left:-250px;
-}
-
-.basic-btn {
-    width:100px;
-    margin:0;
-}
-
-#page {
-    margin-top: 1em;
-    width: 50em;
-}
-
-#page img {
-    margin-top:3rem;
-}
-
-h2 {
-    margin:0;
-}
-
-app-members {
-    position: absolute;
-}
-
-.container {
-    width: 100%;
-}
-
-.container ul {
-    margin-left: 0rem;
-}
-
-.nav-tabs {
-    border-bottom: 0.2rem solid white;
-}
-
-.tainer {
-    background: transparent;
-    padding:3.5em;
-    width:500px;
-    position:fixed;
-    left:50%;
-    margin-left:-250px;
-}
-
-.nav-tabs {
-    border-bottom: 0;
-}
-
-.nav-tabs>li>a {
-    padding: 0;
-    margin-right: 0;
-    border: 0px solid #ddd;
-}
-
-li.active {
-    border-bottom: 4px solid #000;
-}
-
-.nav>li>a>img {
-    max-width: none;
-    margin-top: 0 !important;
-    cursor: pointer;
-}
-
-.nav li a img {
-    height: 50px;
-}
-
-.tab-content{
-    margin-top: 2em;
-}
-
-.imagelogo {
-    width: 12rem;
-    height: 10rem;
-    margin-left: 35%;
-}
-
-.lineup{
-    line-height: 1px;
-}
-
-
-/* CSS Image gallery */
-
-
-div.gallery img {
-    width: 100%;
-    height: auto;
-}
-
-div.desc {
-    padding: 15px;
-    text-align: center;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-.responsive {
-    padding: 0 6px;
-    float: left;
-    width: 98.99999%;
-}
-
-@media only screen and (max-width: 700px){
-    .responsive {
-        width: 49.99999%;
-        margin: 6px 0;
-    }
-}
-
-@media only screen and (max-width: 500px){
-    .responsive {
-        width: 100%;
-    }
-}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-
-
-
-
-
-
-
-/* END - CSS Image gallery */
-
-
-
-.contactUs {
-    font-size: 1.5rem;
-}
-
-
-
-
-/* CSS for Mobile - iphone 6 */
-
-@media (max-width: 600px) {
-    #toolbar {
-        width:90%;
-        margin-left: -45%;
-    }
-
-    #page {
-        overflow-x: unset;
-        width: 22rem;
-    }
-
-    header{
-        width: 23rem
-    }
-
-    .container {
-        padding-left: 0;
-    }
-
-    .nav-tabs {
-        margin-top: 30px;
-    }
-    .nav li a img {
-        height: 25px;
-    }
-
-    .imagelogo {
-        margin-left: 20%;
-    }
-
-    .tab-content {
-        width: 25em;
-    }
-
-    .iframeTickets {
-        width: 20rem;
-        -moz-transform: scale(0.50);
-        -moz-transform-origin: 0 0;
-        -o-transform: scale(0.50);
-        -o-transform-origin: 0 0;
-        -webkit-transform: scale(0.50);
-        -webkit-transform-origin: 0 0;
-    }
-}
-
-
-@media (max-width: 847px) {
-    .nav li a img {
-        height: 25px;
-    }
+.btn-logout{
+  padding: 0;
+  width: 10%;
+  font-size: 2.8rem;
+  margin-bottom: 0;
 }
