--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -341,7 +341,7 @@
         <div class="row">
             <div class="col-lg-12">
 
-  					<form #formData='ngForm' (ngSubmit)="onSubmit(formData)">
+  					<form #formData='ngForm' class="registerForm" (ngSubmit)="onSubmit(formData)">
   						<div class="row">
   							<div class="6u">
   								<input type="text" placeholder="code" (ngModel)="code" name="code" class="txt form-control text-line {{css_class}}" (focus)="focusFunction()" required>
@@ -387,3 +387,44 @@
           </div>
         </div>
   </section>
+
+
+<div class="container2 center-block">
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>
+  <div class="chevron"></div>       <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+    <div class="chevron"></div>
+
+</div>
+
+
+
+<section id="contact" class="banner2">
+  <header>
+    <h3 style="font-size: 5.5em;">Contact</h3>
+  </header>
+  <div class="container">
+    <div class="row">
+      <iframe allowTransparency="true" style="min-height:450px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="https://www.123contactform.com/my-contact-form-3132274.html">
+          <p>Your browser does not support iframes. Please use try from a desktop browser. </p>
+      </iframe>
+
+      <br />
+      <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" class="contactUs" >oder schreib uns eine E-Mail</a>
+    </div>
+  </div>
+
+</section>
