--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,175 +1,85 @@
-<div class="members-wrapper">
+
+<div id='stars'></div>
+<div id='stars2'></div>
+<div id='stars3'></div>
+
+<div id="particle-canvas"></div>
+
+<div style="text-align: center;">
+  <button (click)="logout()" class="btn-logout">Logout</button>
+</div>
+
+<!-- Header -->
+<section id="header">
 
 
-  <div class="form-container" id="toolbar">
+<header>
+  <img style="width: 40%" src="../../assets/images/logo.svg">
+
+  <svg class="logo-header-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+   viewBox="0 0 300.5 1868.9" enable-background="new 0 0 300.5 1868.9" xml:space="preserve">
+  <g>
+  <path fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" d="M151.8,9.5l63.7,106.9h-38.3
+  	c0,0-15.3,2.7-15.7,20.8c-0.2,12.7-1.3,456.7-1.3,456.7l-10-8.7l-10.5,8.7v-454c0,0,0.1-22.7-16.2-22.7c-16.1,0-40.7,0.2-40.7,0.2
+  	L151.8,9.5z"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="110.1" y1="212.9" x2="110.1" y2="398.9"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="191.1" y1="212.9" x2="191.1" y2="398.9"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="432.5" r="8"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="432.5" r="8"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="463.5" r="8"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="463.5" r="8"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="495.5" r="8"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="495.5" r="8"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="526.5" r="8"/>
+  <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="526.5" r="8"/>
+  <polygon fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" points="150.1,598.5 112.8,636.2 125.1,649.2
+  	150.1,623.9 175.1,649.2 188,637.1 	"/>
+  <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="648.9" x2="150.1" y2="704.9"/>
+  <circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="754.1" r="26.3"/>
+  <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="113.1" y1="805.9" x2="113.1" y2="861.9"/>
+  <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="185.1" y1="806.9" x2="185.1" y2="862.9"/>
+  <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="805.9" x2="150.1" y2="890.9"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="59.1" y1="1046.9" x2="59.1" y2="1232.9"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="239.1" y1="1046.9" x2="239.1" y2="1232.9"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="109.1" y1="1167.9" x2="109.1" y2="1353.9"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="190.1" y1="1167.9" x2="190.1" y2="1353.9"/>
+  <polygon fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" points="150.3,901.9 38.1,1010.9 140.1,1010.9
+  	139.9,1048.9 94.1,1048.9 93.8,1066.9 140.1,1066.9 139.9,1096.9 94.1,1096.9 93.9,1114.9 140.1,1114.9 139.9,1406.9 7.1,1538.4
+  	19.3,1551.1 138.1,1435.9 138.1,1476.9 6.1,1608.9 17.8,1621.9 138.1,1505.9 138.1,1540.9 6.1,1669.9 17.8,1681.9 138.1,1566.9
+  	138.1,1605.9 6.1,1738.9 17.8,1750.9 138.1,1636.9 138.1,1770.9 159.1,1770.9 159.1,1634.9 274.1,1750.9 288.6,1737.9
+  	157.1,1606.9 157.1,1566.9 275.1,1683.9 290.9,1667.4 156.1,1533.4 156.1,1499.9 278.1,1620.9 291.9,1606.8 156.1,1471.3
+  	156.1,1431.9 274.1,1548.9 287.1,1535.4 156.1,1404.9 156.1,1115.9 204.1,1115.9 204.1,1097.9 160.1,1097.9 160.1,1065.9
+  	203.1,1065.9 203.1,1048.9 159.1,1048.9 159.1,1009.9 263.1,1009.9 	"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1844.9" x2="179.1" y2="1844.9"/>
+  <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1863.9" x2="179.1" y2="1863.9"/>
+  <circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="1796.4" r="27.5"/>
+  </g>
+  </svg>
 
 
-      <header [@fallIn]="state">
-          <img class="imagelogo" src="../assets/images/logo.svg" />
-          <button (click)="logout()" class="basic-btn">Logout</button>
-      </header>
+</header>
+</section>
 
 
-      <div id="page" [@moveInLeft]="state">
 
-        <div class="container">
-          <ul class="nav nav-tabs">
-            <li class="active">
-                <a data-toggle="tab" href="#info">
-                    <img class="imagemenu" src="../assets/images/info_label.png" />
-                </a>
-            </li>
-            <li>
-                <a data-toggle="tab" href="#tickets">
-                    <img class="imagemenu" src="../assets/images/tickets_label.png" />
-                </a>
-            </li>
-            <li>
-                <a data-toggle="tab" href="#contact">
-                    <img class="imagemenu" src="../assets/images/contact_label.png" />
-                </a>
-            </li>
-            <li>
-                <a data-toggle="tab" href="#hall">
-                    <img class="imagemenu" src="../assets/images/hall_label.png" />
-                </a>
-            </li>
-            <!-- <li><a data-toggle="tab" href="#menu3">Menu 3</a></li> -->
-          </ul>
 
-          <div class="tab-content">
-            <div id="info" class="tab-pane fade in active">
-              <h3></h3>
-              <p>Schön, dass Du den Weg hierher gefunden hast. Dani, Phil, Marc und Tom haben sich mit Klang-Heimlich zum Ziel gesetzt, einzigartige Events zu schaffen.
-                Events, auf welchen neue Freundschaften geschlossen werden, getanzt, gelacht, gelebt wird. Events, bei welchen die Musik und die Location im Mittelpunkt stehen und einzigartig sind. Events, die in Sachen Dekoration und Verspieltheit herausstechen. Events, bei denen Erinnerungen nicht nur bis zum nächsten Wochenende reichen, sondern weit darüber hinaus. Events, welche musikalisch durch ausgesuchte Lokale und Internationale DJ’s Balsam für die Ohren sind.</p>
-                <p> Wir freuen uns Dich mit dieser Plattform auf unsere nächsten Klang-Heimlich Events aufmerksam zu machen und Dich bald bei uns begrüssen zu dürfen.</p>
+<div id="tickets">
+	<section id="banner2" class="tyle2" style="margin-top: 60px">
+		<section>
+		  <div class="container ">
+		      <div class="row">
+		          <div class="col-lg-12">
 
-                <b>LINE-UP:</b> <br />
-
-                ♫ Goldcap (Habitas / Los Angeles) <br />
-                ♫ Milo Häfliger (Clandestine Artists / Sparklers)<br />
-                ♫ Ocenvs Orientalis (Kanto Records / Bar 25)<br />
-                ♫ Sarah Kreis (Amselcom)<br />
-                ♫ Andreas Ramos (Hive, Friedas Büxe)<br />
-                ♫ Are:Age<br />
-                ♫ Dani Posada (Klang Heimlich / RUND)<br />
-                ♫ Elrino (Elysia / Abartik)<br />
-                ♫ Temo Sayin (Empathie)<br />
-                ♫ Tom Hängs (Klang Heimlich)<br />
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image01.jpg">
-                      <img src="../assets/images/gallery/image01.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image02.jpg">
-                      <img src="../assets/images/gallery/image02.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image03.jpg">
-                      <img src="../assets/images/gallery/image03.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image04.jpg">
-                      <img src="../assets/images/gallery/image04.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image05.jpg">
-                      <img src="../assets/images/gallery/image05.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image06.jpg">
-                      <img src="../assets/images/gallery/image06.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image07.jpg">
-                      <img src="../assets/images/gallery/image07.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
-                </div>
-
-                <div class="responsive">
-                  <div class="gallery">
-                    <a target="_blank" href="../assets/images/gallery/image08.jpg">
-                      <img src="../assets/images/gallery/image08.jpg" alt="Image KH" width="300" height="200">
-                    </a>
-                  </div>
+                <h3>Tickets kaufen</h3>
+                <div>
+                    <iframe width="650" class="iframeTickets" height="2000"
+                      src="https://v3.ticketino.com/v3/de/OrganizerShop/531072/Event/Klang-Heimlich-ide-Stadt-25Hours-Hotel/73708"></iframe>
                 </div>
 
 
-                <div class="clearfix"></div>
-
-
-            </div>
-            <div id="tickets" class="tab-pane fade">
-
-              <!--
-              <h3>Tickets</h3>
-              <div>
-                  <script src="http://embed.ticketfrog.ch/api/safari-cookie-fix.js"></script>
-                  <iframe width="650" class="iframeTickets" height="2000" src="https://embed.ticketfrog.ch/de/p/party/house-techno/silvesterzauber-1510026170968001220.html?color=95C11F&infobox=1&description=1&location=1&organisator=1&sponsors=1"></iframe>
-              </div>
-                -->
-
-
-              <a style="font-size:1.8rem" target="_blank" href="https://v3.ticketino.com/v3/de/OrganizerShop/531072/Event/Klang-Heimlich-ide-Stadt-25Hours-Hotel/73708">
-                  Tickets bei TICKETINO
-              </a>
-
-
-            </div>
-            <div id="contact" class="tab-pane fade">
-              <h3>Contact</h3>
-
-              <!-- www.123contactform.com script begins here -->
-              <iframe allowTransparency="true" style="min-height:450px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="https://www.123contactform.com/my-contact-form-3132274.html">
-                  <p>Your browser does not support iframes. Please use try from a desktop browser. </p>
-              </iframe>
-
-              <br />
-              <a href="mailto:klang.heimlich.zh@gmail.com" target="_top" class="contactUs" >oder schreib uns eine E-Mail</a>
-
-
-            </div>
-            <div id="hall" class="tab-pane fade">
-              <h3>Hall of fame</h3>
-
-
-
-
-
-            </div>
-          </div>
-        </div>
-
-
-
-      </div>
-
-  </div>
+		          </div>
+		      </div>
+		   </div>
+		 </section>
+	</section>
 </div>
