--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,57 +10,57 @@
 
 <!-- Header -->
 <section id="header">
-<header>
+    <header>
+
+        <svg class="logo-header-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+         viewBox="0 0 300.5 1868.9" enable-background="new 0 0 300.5 1868.9" xml:space="preserve">
+        <g>
+        <path fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" d="M151.8,9.5l63.7,106.9h-38.3
+        	c0,0-15.3,2.7-15.7,20.8c-0.2,12.7-1.3,456.7-1.3,456.7l-10-8.7l-10.5,8.7v-454c0,0,0.1-22.7-16.2-22.7c-16.1,0-40.7,0.2-40.7,0.2
+        	L151.8,9.5z"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="110.1" y1="212.9" x2="110.1" y2="398.9"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="191.1" y1="212.9" x2="191.1" y2="398.9"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="432.5" r="8"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="432.5" r="8"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="463.5" r="8"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="463.5" r="8"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="495.5" r="8"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="495.5" r="8"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="526.5" r="8"/>
+        <circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="526.5" r="8"/>
+        <polygon fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" points="150.1,598.5 112.8,636.2 125.1,649.2
+        	150.1,623.9 175.1,649.2 188,637.1 	"/>
+        <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="648.9" x2="150.1" y2="704.9"/>
+        <circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="754.1" r="26.3"/>
+        <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="113.1" y1="805.9" x2="113.1" y2="861.9"/>
+        <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="185.1" y1="806.9" x2="185.1" y2="862.9"/>
+        <line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="805.9" x2="150.1" y2="890.9"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="59.1" y1="1046.9" x2="59.1" y2="1232.9"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="239.1" y1="1046.9" x2="239.1" y2="1232.9"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="109.1" y1="1167.9" x2="109.1" y2="1353.9"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="190.1" y1="1167.9" x2="190.1" y2="1353.9"/>
+        <polygon fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" points="150.3,901.9 38.1,1010.9 140.1,1010.9
+        	139.9,1048.9 94.1,1048.9 93.8,1066.9 140.1,1066.9 139.9,1096.9 94.1,1096.9 93.9,1114.9 140.1,1114.9 139.9,1406.9 7.1,1538.4
+        	19.3,1551.1 138.1,1435.9 138.1,1476.9 6.1,1608.9 17.8,1621.9 138.1,1505.9 138.1,1540.9 6.1,1669.9 17.8,1681.9 138.1,1566.9
+        	138.1,1605.9 6.1,1738.9 17.8,1750.9 138.1,1636.9 138.1,1770.9 159.1,1770.9 159.1,1634.9 274.1,1750.9 288.6,1737.9
+        	157.1,1606.9 157.1,1566.9 275.1,1683.9 290.9,1667.4 156.1,1533.4 156.1,1499.9 278.1,1620.9 291.9,1606.8 156.1,1471.3
+        	156.1,1431.9 274.1,1548.9 287.1,1535.4 156.1,1404.9 156.1,1115.9 204.1,1115.9 204.1,1097.9 160.1,1097.9 160.1,1065.9
+        	203.1,1065.9 203.1,1048.9 159.1,1048.9 159.1,1009.9 263.1,1009.9 	"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1844.9" x2="179.1" y2="1844.9"/>
+        <line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1863.9" x2="179.1" y2="1863.9"/>
+        <circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="1796.4" r="27.5"/>
+        </g>
+        </svg>
 
 
-<!--
-		<svg class="logo-header-svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
- viewBox="0 0 300.5 1868.9" enable-background="new 0 0 300.5 1868.9" xml:space="preserve">
-<g>
-<path fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" d="M151.8,9.5l63.7,106.9h-38.3
-	c0,0-15.3,2.7-15.7,20.8c-0.2,12.7-1.3,456.7-1.3,456.7l-10-8.7l-10.5,8.7v-454c0,0,0.1-22.7-16.2-22.7c-16.1,0-40.7,0.2-40.7,0.2
-	L151.8,9.5z"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="110.1" y1="212.9" x2="110.1" y2="398.9"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="191.1" y1="212.9" x2="191.1" y2="398.9"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="432.5" r="8"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="432.5" r="8"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="463.5" r="8"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="463.5" r="8"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="495.5" r="8"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="495.5" r="8"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="109.5" cy="526.5" r="8"/>
-<circle fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" cx="191.5" cy="526.5" r="8"/>
-<polygon fill="none" stroke="#fff" stroke-width="5" stroke-miterlimit="10" points="150.1,598.5 112.8,636.2 125.1,649.2
-	150.1,623.9 175.1,649.2 188,637.1 	"/>
-<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="648.9" x2="150.1" y2="704.9"/>
-<circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="754.1" r="26.3"/>
-<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="113.1" y1="805.9" x2="113.1" y2="861.9"/>
-<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="185.1" y1="806.9" x2="185.1" y2="862.9"/>
-<line fill="none" stroke="#fff" stroke-width="20" stroke-miterlimit="10" x1="150.1" y1="805.9" x2="150.1" y2="890.9"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="59.1" y1="1046.9" x2="59.1" y2="1232.9"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="239.1" y1="1046.9" x2="239.1" y2="1232.9"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="109.1" y1="1167.9" x2="109.1" y2="1353.9"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="190.1" y1="1167.9" x2="190.1" y2="1353.9"/>
-<polygon fill="none" stroke="#fff" stroke-width="6" stroke-miterlimit="10" points="150.3,901.9 38.1,1010.9 140.1,1010.9
-	139.9,1048.9 94.1,1048.9 93.8,1066.9 140.1,1066.9 139.9,1096.9 94.1,1096.9 93.9,1114.9 140.1,1114.9 139.9,1406.9 7.1,1538.4
-	19.3,1551.1 138.1,1435.9 138.1,1476.9 6.1,1608.9 17.8,1621.9 138.1,1505.9 138.1,1540.9 6.1,1669.9 17.8,1681.9 138.1,1566.9
-	138.1,1605.9 6.1,1738.9 17.8,1750.9 138.1,1636.9 138.1,1770.9 159.1,1770.9 159.1,1634.9 274.1,1750.9 288.6,1737.9
-	157.1,1606.9 157.1,1566.9 275.1,1683.9 290.9,1667.4 156.1,1533.4 156.1,1499.9 278.1,1620.9 291.9,1606.8 156.1,1471.3
-	156.1,1431.9 274.1,1548.9 287.1,1535.4 156.1,1404.9 156.1,1115.9 204.1,1115.9 204.1,1097.9 160.1,1097.9 160.1,1065.9
-	203.1,1065.9 203.1,1048.9 159.1,1048.9 159.1,1009.9 263.1,1009.9 	"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1844.9" x2="179.1" y2="1844.9"/>
-<line fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" x1="121.1" y1="1863.9" x2="179.1" y2="1863.9"/>
-<circle fill="none" stroke="#fff" stroke-width="10" stroke-miterlimit="10" cx="150.1" cy="1796.4" r="27.5"/>
-</g>
-</svg>
 
--->
+    	<img class="image-logo" src="../../assets/images/logo.svg">
+	</header>
+	<footer>
+		<a href="#register" class="button style2 scrolly-middle">Willkommen</a>
+	</footer>
 
-				<img style="width: 80%" src="../../assets/images/logo.svg">
-				</header>
-				<footer>
-					<a href="#register" class="button style2 scrolly-middle">Willkommen</a>
-				</footer>
+
 </section>
 
 
@@ -296,6 +296,7 @@
 
 
 
+<!-- LOGIN FORM -->
 
 <section id="login" class="banner2 style2" style="margin-top: 60px">
   <section>
@@ -305,23 +306,23 @@
 
           <div class="container">
       			<form #formDataLogin='ngForm' class="loginForm" (ngSubmit)="onSubmitLogin(formDataLogin)">
-                <input type="text" placeholder="Email address.." (ngModel)="emailLogin" name="emailLogin" class="txt" required>
-                <input type="password" placeholder="passwort" (ngModel)="passwordLogin" name="passwordLogin" class="txt" required>
+                    <input type="text" placeholder="Email address.." (ngModel)="emailLogin" name="emailLogin" class="txt" required>
+                    <input type="password" placeholder="passwort" (ngModel)="passwordLogin" name="passwordLogin" class="txt" required>
 
-                   <br />
+                       <br />
 
-                   <div class="10u">
+                     <div class="10u">
                        <span class="error" *ngIf="errorLogin" [@fallIn]='state'>{{ errorLogin }}</span>
-                   </div>
+                     </div>
 
-          				 <div class="row">
-          				   <div class="col-lg-12">
-          						<ul class="actions">
-          							<li><input type="submit" value="Submit" /></li>
-          							<li><input type="reset" class="style3" value="Clear Form" /></li>
-          						</ul>
-          					</div>
-          				</div>
+      				 <div class="row">
+      				   <div class="col-lg-12">
+      						<ul class="actions">
+      							<li><input type="submit" value="Submit" /></li>
+      							<li><input type="reset" class="style3" value="Clear Form" /></li>
+      						</ul>
+      					</div>
+      				</div>
 
               </form>
             </div>
@@ -331,62 +332,50 @@
 
 
 
+<!-- Register FORM -->
+
+<section id="register" class="banner2">
+  <header>
+   <h2 style="font-size: 3.5em;">Register</h2>
+ </header>
+<div class="container">
 
 
-  <section id="register" class="banner2">
-      <header>
-       <h2 style="font-size: 3.5em;">Register</h2>
-     </header>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
+			<form #formData='ngForm' class="registerForm" (ngSubmit)="onSubmit(formData)">
+				<div class="row">
 
-  					<form #formData='ngForm' class="registerForm" (ngSubmit)="onSubmit(formData)">
-  						<div class="row">
-  							<div class="6u">
-  								<input type="text" placeholder="code" (ngModel)="code" name="code" class="txt form-control text-line {{css_class}}" (focus)="focusFunction()" required>
-  							</div>
-  							<div class="6u">
-  								<input type="text" placeholder="vorname" (ngModel)="vorname" name="vorname" class="txt form-control text-line" required>
-  							</div>
-                            <div class="6u">
-  								<input type="text" placeholder="nachname" (ngModel)="nachname" name="nachname" class="txt form-control text-line" required>
-  							</div>
-  							<div class="6u">
-  								<input type="text" placeholder="e-mail" (ngModel)="email" name="email" class="txt form-control text-line" required>
-  							</div>
-                            <div class="6u">
-  								<input type="password" placeholder="passwort" (ngModel)="password" name="password" class="txt form-control text-line" required>
-  							</div>
-  							<div class="6u">
-  								<input type="password" placeholder="Passwort wiederholen" (ngModel)="password2" name="password2" class="txt form-control text-line" required>
-  							</div>
-
-                            <div class="6u abg-checkbox">
-                              <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
-                              <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
-                            </div>
-
-                        </div>
-
-                        <div class="10u">
-                            <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
-                        </div>
+                    <input type="text" placeholder="code" (ngModel)="code" name="code" class="txt form-control text-line {{css_class}}" (focus)="focusFunction()" required>
+                    <input type="text" placeholder="vorname" (ngModel)="vorname" name="vorname" class="txt form-control text-line" required>
+                    <input type="text" placeholder="nachname" (ngModel)="nachname" name="nachname" class="txt form-control text-line" required>
+                    <input type="text" placeholder="e-mail" (ngModel)="email" name="email" class="txt form-control text-line" required>
+                    <input type="password" placeholder="passwort" (ngModel)="password" name="password" class="txt form-control text-line" required>
+                    <input type="password" placeholder="passwort wiederholen" (ngModel)="password2" name="password2" class="txt form-control text-line" required>
 
 
-                        <div class="row">
- 						   <div class="col-lg-12">
- 								<ul class="actions">
- 									<li><input type="submit" value="Submit" /></li>
- 									<li><input type="reset" class="style3" value="Clear Form" /></li>
- 								</ul>
- 							</div>
- 						</div>
-  					</form>
+                    <div class="6u abg-checkbox">
+                      <input type="checkbox" [checked]="agreeConditions" (change)="agreeConditions = !agreeConditions" />
+                      <a class="termsLink" routerLink="/terms"> AGB akzeptieren </a>
+                    </div>
+
             </div>
-          </div>
+
+            <div class="10u">
+                <span class="error" *ngIf="error" [@fallIn]='state'>{{ error }}</span>
+            </div>
+
+
+            <div class="row">
+				   <div class="col-lg-12">
+						<ul class="actions">
+							<li><input type="submit" value="Submit" /></li>
+							<li><input type="reset" class="style3" value="Clear Form" /></li>
+						</ul>
+					</div>
+				</div>
+			</form>
         </div>
-  </section>
+
+</section>
 
 
 <div class="container2 center-block">
