--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,3 @@
-
 <div id='stars'></div>
 <div id='stars2'></div>
 <div id='stars3'></div>
@@ -70,9 +69,10 @@
     <h3>Mindset</h3>
   </header>
   <div class="weare">
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor <br>
-      invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.<br>
-      At vero eos et accusam et justo duo dolore</p>
+    <p>The passion for the music, the sense of community and unconditional love for our neighbours,
+        losing track of time while dancing and the creation of new worlds from scratch in unique locations
+        represent the pillars of Klang ♫ Heimlich. We aim to share our philosophie of life with you and take you
+        with us on a musical trip where memories are kept in our hearts because they are shared.</p>
   </div>
   <footer>
     <a href="#first" class="button style2 scrolly">Act on this message</a>
@@ -163,11 +163,12 @@
 			  <section>
 
     			  <h2 style="text-align: left">Dani Posada</h2>
-    				<p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
-    				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
-    				facilisis leo magna.</p>
+    				<p style="text-align: left">As one of the founders of Klang Heimlich, Dani Posada is taking care of the national
+                        bookings, decoration and artwork. Moreover, he is one of the three residents at Klang Heimlich.
+                        His sets are defined by groovy sounds that can go from downtempo over deep- and techhouse to techno,
+                        telling a story that is slowly building up and gaining in intensity until it reaches the climax. </p>
     				<hr/>
-            <h2 style="text-align: left">Ruben Coslada</h2>
+                    <h2 style="text-align: left">Ruben Coslada</h2>
     				<p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
     				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
     				facilisis leo magna.</p>
@@ -408,7 +409,7 @@
   <div class="container">
     <div class="row">
       <iframe allowTransparency="true" style="min-height:450px; height:inherit; overflow:auto;" width="100%" id="contactform123" name="contactform123" marginwidth="0" marginheight="0" frameborder="0" src="https://www.123contactform.com/my-contact-form-3132274.html">
-          <p>Your browser does not support iframes. Please use try from a desktop browser. </p>
+          <p>Your browser does not support iframes. Please try from a desktop browser. </p>
       </iframe>
 
       <br />
