--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -68,14 +68,13 @@
 		<section>
 		  <div class="container ">
 		      <div class="row">
-		          <div class="col-lg-12">
+		          <div class="">
 
                 <h3>Tickets kaufen</h3>
                 <div>
                     <iframe width="650" class="iframeTickets" height="2000"
                       src="https://v3.ticketino.com/v3/de/OrganizerShop/531072/Event/Klang-Heimlich-ide-Stadt-25Hours-Hotel/73708"></iframe>
                 </div>
-
 
 		          </div>
 		      </div>
