--- a/src/app/members/members.component.css
+++ b/src/app/members/members.component.css
@@ -12,6 +12,8 @@
 
 .logo-header-svg{
   margin-bottom: -30rem;
+  position: relative;
+  z-index: 1;
 }
 
 
@@ -24,4 +26,5 @@
   width: 10%;
   font-size: 2.8rem;
   margin-bottom: 0;
+  z-index: 5;
 }
