--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -56,7 +56,7 @@
     	<img class="image-logo" src="../../assets/images/logo.svg">
 	</header>
 	<footer>
-		<a href="#register" class="button style2 scrolly-middle">Willkommen</a>
+		<a href="#first" class="button style2 scrolly-middle">Willkommen</a>
 	</footer>
 
 
@@ -74,9 +74,11 @@
         represent the pillars of Klang ♫ Heimlich. We aim to share our philosophie of life with you and take you
         with us on a musical trip where memories are kept in our hearts because they are shared.</p>
   </div>
+
   <footer>
-    <a href="#first" class="button style2 scrolly">Act on this message</a>
+    <a href="#register" class="button style2 scrolly">Register!</a>
   </footer>
+
 </section>
 
 
@@ -89,35 +91,77 @@
 
 
 <!-- Feature 1 -->
-  <article id="first" class="container box style1 right">
+<article id="first" class="container box style1 right party-element">
+  <a href="#" class="image fit"><img src="../../assets/images/pic02.jpg" alt="" /></a>
+  <div class="inner">
+    <header>
+      <h2>10.05.2018<br />
+      Klang Heimlich i dä Stadt at 25 Hours Hotel Langstrasse.
+      </h2>
+    </header>
+    <p>Goldcap, Milo Häfliger, Ocenvs Orientalis, Sarah Kreis, Andreas Ramos, Are:Age, Dani Posada, Elrino, Juen & Bach, Temo Sayin, Tom Hängs.</p>
+  </div>
+</article>
+
+  <article class="container box style1 left party-element">
     <a href="#" class="image fit"><img src="../../assets/images/pic01.jpg" alt="" /></a>
     <div class="inner">
       <header>
         <h2>31.12.17<br />
-        Silversterzauber</h2>
+        Klang Heimlich Silvesterzauber – Uto-Staffel</h2>
 
       </header>
-      <p>Tortor faucibus ullamcorper nec tempus purus sed penatibus. Lacinia pellentesque eleifend vitae est elit tristique velit tempus etiam.</p>
+      <p>Bernstein, David Dorad, Alejandro Mosso, Powel, Chris, Dani Posada, Dani Nydegger, Don Ramon, Elrino, Juen & Bach, Matija, Nicolike, Playlove, QEBEQ, Ruben Coslada, Rumlaut, Tom Hängs, Trinidad Valentin Bösch.</p>
+    </div>
+  </article>
+
+
+  <article id="first" class="container box style1 right party-element">
+    <a href="#" class="image fit"><img src="../../assets/images/pic01.jpg" alt="" /></a>
+    <div class="inner">
+      <header>
+        <h2>19.08.2017<br />
+        Klang Heimlich uf em Berg – Uto-Staffel</h2>
+
+      </header>
+      <p>Satori, Ida Daugaard, Maes, Michal Zietara, Andreas Ramos, Dani Posada, Juen & Bach, Kalabrese, Luca Gerosa, Matija, Milo Häfliger, Natch, Nici Faerber, Nicolai Strøm, Pasci, Ruben Coslada, Rumlaut, Smalltown Collective, Temo Sayin, Timoteo, Tom Hängs.</p>
     </div>
   </article>
 
 <!-- Feature 2 -->
-  <article class="container box style1 left">
+  <article class="container box style1 left party-element">
     <a href="#" class="image fit"><img src="../../assets/images/pic02.jpg" alt="" /></a>
     <div class="inner">
       <header>
-        <h2>19,20.04.19<br />
-        Klang Heimlich uf em Berg
+        <h2>31.12.2016<br />
+        Klang Heimlich – The First
         </h2>
       </header>
-      <p>Rhoncus mattis egestas sed fusce sodales rutrum et etiam ullamcorper. Etiam egestas scelerisque ac duis magna lorem ipsum dolor.</p>
+      <p>Bernstein, Burt Cobain, Dani Posada, Ismail & Clive, Juen & Bach, Luca & Cedric, Nico Sun, Nicolai Strøm, Rumlaut, Tom Hängs, Workinprogress.  </p>
     </div>
   </article>
+
+
+
+
+
+
+
+
+
   <div class="style3" style="padding-bottom: 50px"></div>
+
+
+
+
+
+
+
+
 
   <!-- Portfolio -->
   <section id="banner" class=" style2" style="margin-top: 60px">
-			<article class="container ">
+			<article class="container container-gallerie">
 				<header>
 					<h3>Gallerie</h3>
 					<p>Justo phasellus et aenean dignissim<br />
@@ -139,6 +183,7 @@
 				</div>
 			</article>
   </section>
+  -->
 
   <!-- Contact -->
 
@@ -229,7 +274,7 @@
   </div>
 
 
-<div style="margin-bottom: -70px" class="box style3">
+<div class="box style3">
     <header>
 			<h3>Music</h3>
     </header>
@@ -237,32 +282,27 @@
 
 
 <div class="player">
-  <div class="container ">
-	<br/>
-	<br/>
+  <div class="container videos-container">
 	<div class="row">
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<a style=" line-height: 10px;" href="https://soundcloud.com/dani_posada/posada-klaus-23-april-2016" class="sc-player"></a>
+		<div class="col-xs-6">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
 		</div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<a href="https://soundcloud.com/ruben-coslada/de-posada-b2b-ruben-coslada-hive-17162017" class="sc-player"></a>
+		<div class="col-xs-6">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 		</div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<a href="https://soundcloud.com/le-n-ko/gingin1" class="sc-player"></a>
+		<div class="col-xs-6">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 		</div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<a href="https://soundcloud.com/le-n-ko/102-102a" class="sc-player"></a>
+		<div class="col-xs-6">
+	      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 		</div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<a href="https://soundcloud.com/le-n-ko/nappe-a-classer" class="sc-player"></a>
+		<div class="col-xs-6">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 		</div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<a href="https://soundcloud.com/le-n-ko/cordeler" class="sc-player"></a>
+		<div class="col-xs-6">
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/333565712&color=%23000000&auto_play=false&hide_related=true&show_comments=false&show_user=true&show_reposts=false&show_teaser=false"></iframe>
 		</div>
-		<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-			<a href="https://soundcloud.com/le-n-ko/yung-simmie-be-cool-nko-mod" class="sc-player"></a>
-		</div>
-	</div>
+  </div>
   </div>
 	<div class="clear"></div>
 </div>
@@ -275,7 +315,7 @@
 		  <header>
 		  	<h2 style="font-size: 3.5em; margin-bottom: 90px">Tickets kaufen</h2>
 		  </header>
-		  <div class="container ">
+		  <div class="container">
 		      <div class="row">
 		          <div class="col-lg-12">
     					<form method="post" action="#">
