--- a/src/app/reset/reset.component.css
+++ b/src/app/reset/reset.component.css
@@ -3,9 +3,7 @@
 }
 
 .form-container {
-    form {
-        margin-top: 1rem;
-    }
+  opacity: 1;
 }
 
 .loginForm{
@@ -26,6 +24,7 @@
 
 .resetText {
     font-weight: bold;
+    color: black;
 }
 
 .hidden {
