--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -169,17 +169,35 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/01.jpg" class="image fit"><img src="../../assets/images/thumbs/01.jpg" alt="" title="Ad infinitum" /></a></div>
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/02.jpg" class="image fit"><img src="../../assets/images/thumbs/02.jpg" alt="" title="Dressed in Clarity" /></a></div>
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/03.jpg" class="image fit"><img src="../../assets/images/thumbs/03.jpg" alt="" title="Raven" /></a></div>
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/04.jpg" class="image fit"><img src="../../assets/images/thumbs/04.jpg" alt="" title="I'll have a cup of Disneyland, please" /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/01.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/01.jpg" alt="" title=" " /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/02.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/02.jpg" alt="" title=" " /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/03.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/03.jpg" alt="" title=" " /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/04.jpg" class="image fit"><img class="img-element"src="../../assets/images/thumbs/04.jpg" alt="" title=" " /></a></div>
 					</div>
 					<div class="row 0%">
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/05.jpg" class="image fit"><img src="../../assets/images/thumbs/05.jpg" alt="" title="Cherish" /></a></div>
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/06.jpg" class="image fit"><img src="../../assets/images/thumbs/06.jpg" alt="" title="Different." /></a></div>
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/07.jpg" class="image fit"><img src="../../assets/images/thumbs/07.jpg" alt="" title="History was made here" /></a></div>
-						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/08.jpg" class="image fit"><img src="../../assets/images/thumbs/08.jpg" alt="" title="People come and go and walk away" /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/05.jpg" class="image fit"><img class="img-element"src="../../assets/images/thumbs/05.jpg" alt="" title=" " /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/06.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/06.jpg" alt="" title=" " /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/07.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/07.jpg" alt="" title=" " /></a></div>
+						<div class="3u 12u(mobile)"><a href="../../assets/images/fulls/08.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/08.jpg" alt="" title=" " /></a></div>
 					</div>
+          <div class="row 0%">
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/09.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/09.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/10.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/10.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/11.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/11.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/12.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/12.jpg" alt="" title=" " /></a></div>
+          </div>
+          <div class="row 0%">
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/13.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/13.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/14.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/14.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/15.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/15.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/16.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/16.jpg" alt="" title=" " /></a></div>
+          </div>
+          <div class="row 0%">
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/17.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/17.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/18.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/18.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/19.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/19.jpg" alt="" title=" " /></a></div>
+            <div class="3u 12u(mobile)"><a href="../../assets/images/fulls/20.jpg" class="image fit"><img class="img-element" src="../../assets/images/thumbs/20.jpg" alt="" title=" " /></a></div>
+          </div>
 				</div>
 			</article>
   </section>
@@ -213,15 +231,20 @@
                         His sets are defined by groovy sounds that can go from downtempo over deep- and techhouse to techno,
                         telling a story that is slowly building up and gaining in intensity until it reaches the climax. </p>
     				<hr/>
-                    <h2 style="text-align: left">Ruben Coslada</h2>
+            <h2 style="text-align: left">Juen & Bach</h2>
     				<p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
     				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
     				facilisis leo magna.</p>
 
-    				<h2 style="text-align: left">Ruben Coslada2</h2>
+    				<h2 style="text-align: left">Phil Lutz</h2>
     				<p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
     				ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
     				facilisis leo magna.</p>
+
+            <h2 style="text-align: left">Tom Hängs</h2>
+            <p style="text-align: left">Donec consectetur vestibulum dolor et pulvinar. Etiam vel felis enim, at viverra
+            ligula. Ut porttitor sagittis lorem, quis eleifend nisi ornare vel. Praesent nec orci
+            facilisis leo magna.</p>
 
 			 </section>
 
@@ -229,40 +252,117 @@
 				<header>
 
 				</header>
-				<div class="table-wrapper">
-					<table class="default">
-						<thead>
 
-						</thead>
-						<tbody>
-							<tr>
 
-								<td>Dani Posada</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td colspan="3">Link</td>
-							</tr>
-							<tr>
+        <div class="divTable">
+        	<div class="divTableBody">
+        		<div class="divTableRow">
+        			<div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/andreasramos.jpg" /></div>
+        			<div class="divTableCell">Andreas Ramos</div>
+        			<div class="divTableCell"><a href="https://www.facebook.com/andreasramosmusic/" target="_blank"> LINK </a> </div>
+        		</div>
+        		<div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/areage.jpg" /></div>
+        			<div class="divTableCell">Are:Age</div>
+        			<div class="divTableCell"><a href="https://www.facebook.com/are.age.live/" target="_blank"> LINK </a> </div>
+        		</div>
+        		<div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/bernstein.jpg" /></div>
+        			<div class="divTableCell">Bernstein</div>
+        			<div class="divTableCell"><a href="https://www.facebook.com/bernsteinmusik/" target="_blank"> LINK </a> </div>
+        		</div>
+        		<div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/burtcobain.jpg" /></div>
+        			<div class="divTableCell">Burt Cobain</div>
+        			<div class="divTableCell"><a href="https://www.facebook.com/Burt-Cobain-1622359221367259/" target="_blank"> LINK </a> </div>
+        		</div>
+        		<div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/ismailclive.jpg" /></div>
+        			<div class="divTableCell">Ismail & Clive</div>
+        			<div class="divTableCell"><a href="https://www.facebook.com/Ismailundclive/" target="_blank"> LINK </a> </div>
+        		</div>
+        		<div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/jb.jpg" /></div>
+        			<div class="divTableCell">Juen & Bach</div>
+        			<div class="divTableCell"><a href="https://www.facebook.com/JuenBach" target="_blank"> LINK </a> </div>
+        		</div>
+        		<div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/kalabrese.jpg" /></div>
+        			<div class="divTableCell">Kalabrese</div>
+        			<div class="divTableCell"><a href="https://www.facebook.com/kalabrese" target="_blank"> LINK </a> </div>
+        		</div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/lucagerosa.jpg" /></div>
+              <div class="divTableCell">Luca Gerosa</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/che.rossa" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/matija.jpg" /></div>
+              <div class="divTableCell">Matija</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/djmatija/" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/milo.jpg" /></div>
+              <div class="divTableCell">Milo Häfliger</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/milo.hafliger" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/natch.jpg" /></div>
+              <div class="divTableCell">Natch</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/natchporres" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/nicifaerber.jpg" /></div>
+              <div class="divTableCell">Nici Faerber</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/nici.faerber" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/nicosun.jpg" /></div>
+              <div class="divTableCell">Nico Sun</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/nicsonne/" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/pasci.jpg" /></div>
+              <div class="divTableCell">Pasci</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/dj.pasci/" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/rubencoslada.jpg" /></div>
+              <div class="divTableCell">Ruben Coslada</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/rubencosladamusic/" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/rumlaut.jpg" /></div>
+              <div class="divTableCell">Rumlaut</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/rumlaut/" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/smalltown.jpg" /></div>
+              <div class="divTableCell">Smalltown Collective</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/SmalltownCollective" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/temosayin.jpg" /></div>
+              <div class="divTableCell">Temo Sayin</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/temo.sayin" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/timoteo.jpg" /></div>
+              <div class="divTableCell">Timoteo</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/schickerio" target="_blank"> LINK </a> </div>
+            </div>
+            <div class="divTableRow">
+              <div class="divTableCell"><img class="img-artist" src="../../assets/images/artists/working.jpg" /></div>
+              <div class="divTableCell">Workinprogress</div>
+              <div class="divTableCell"><a href="https://www.facebook.com/workinprogressZH/" target="_blank"> LINK </a> </div>
+            </div>
+        	</div>
+        </div>
+        <!-- DivTable.com -->
 
-								<td>Ruben Coslada</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td colspan="3">Link</td>
-							</tr>
-							<tr>
 
-								<td>Dani Posada</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td colspan="3">Link</td>
-							</tr>
-							<tr>
 
-								<td>Ruben Coslada</td>
-								<td>Ut porttitor sagittis lorem quis nisi ornare.</td>
-								<td colspan="3">Link</td>
-							</tr>
-						</tbody>
 
-					</table>
-				</div>
 			</section>
 
   </article>
@@ -349,7 +449,7 @@
       			<form #formDataLogin='ngForm' class="loginForm" (ngSubmit)="onSubmitLogin(formDataLogin)">
                     <input type="text" placeholder="Email address.." (ngModel)="emailLogin" name="emailLogin" class="txt" required>
                     <input type="password" placeholder="passwort" (ngModel)="passwordLogin" name="passwordLogin" class="txt" required>
-                    <a routerLink="/reset" id="reset">Passwort vergessen?</a>
+                    <a routerLink="/reset" id="reset" class="resetLink">Passwort vergessen?</a>
                     <br />
 
                      <div class="10u">
