--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1703,7 +1703,7 @@ path, line, circle, polygon {
 			}
 
 			table.default thead {
-				background: #ffffff54;
+				background: #ffffff;
 			}
 
 /* Button */
